@@ -24,23 +24,24 @@
 <li><a class="reference" href="#forms" id="id7" name="id7">Forms</a></li>
 <li><a class="reference" href="#cookies" id="id8" name="id8">Cookies</a></li>
 <li><a class="reference" href="#other-commands" id="id9" name="id9">Other commands</a></li>
+<li><a class="reference" href="#special-variables" id="id10" name="id10">Special variables</a></li>
 </ul>
 </li>
-<li><a class="reference" href="#requirements-availability-and-licensing" id="id10" name="id10">Requirements, Availability and Licensing</a><ul>
-<li><a class="reference" href="#licensing" id="id11" name="id11">Licensing</a></li>
+<li><a class="reference" href="#requirements-availability-and-licensing" id="id11" name="id11">Requirements, Availability and Licensing</a><ul>
+<li><a class="reference" href="#licensing" id="id12" name="id12">Licensing</a></li>
 </ul>
 </li>
-<li><a class="reference" href="#installation-and-examples" id="id12" name="id12">Installation and Examples</a><ul>
-<li><a class="reference" href="#recording-scripts" id="id13" name="id13">Recording scripts</a></li>
+<li><a class="reference" href="#installation-and-examples" id="id13" name="id13">Installation and Examples</a><ul>
+<li><a class="reference" href="#recording-scripts" id="id14" name="id14">Recording scripts</a></li>
 </ul>
 </li>
-<li><a class="reference" href="#implementation-and-extending-twill" id="id14" name="id14">Implementation and Extending Twill</a><ul>
-<li><a class="reference" href="#miscellaneous-implementation-details" id="id15" name="id15">Miscellaneous Implementation Details</a></li>
+<li><a class="reference" href="#implementation-and-extending-twill" id="id15" name="id15">Implementation and Extending Twill</a><ul>
+<li><a class="reference" href="#miscellaneous-implementation-details" id="id16" name="id16">Miscellaneous Implementation Details</a></li>
 </ul>
 </li>
-<li><a class="reference" href="#why-reimplement-pbp" id="id16" name="id16">Why Reimplement PBP?</a></li>
-<li><a class="reference" href="#future-plans" id="id17" name="id17">Future Plans</a></li>
-<li><a class="reference" href="#acknowledgements-and-credits" id="id18" name="id18">Acknowledgements and Credits</a></li>
+<li><a class="reference" href="#why-reimplement-pbp" id="id17" name="id17">Why Reimplement PBP?</a></li>
+<li><a class="reference" href="#future-plans" id="id18" name="id18">Future Plans</a></li>
+<li><a class="reference" href="#acknowledgements-and-credits" id="id19" name="id19">Acknowledgements and Credits</a></li>
 </ul>
 </div>
 <div class="section" id="what-is-twill">
@@ -139,14 +140,20 @@ click may be recorded for use by <strong>submit</strong>, but the value is not c
 </div>
 <div class="section" id="other-commands">
 <h2><a class="toc-backref" href="#id9" name="other-commands">Other commands</a></h2>
+<p><strong>reset_state</strong> -- reset the browser.</p>
 <p><strong>extend_with</strong> <em>&lt;module&gt;</em> -- import commands from Python module.</p>
 <p><strong>getinput</strong> <em>&lt;prompt&gt;</em> -- get keyboard input and store it in <tt class="docutils literal"><span class="pre">__input__</span></tt>.</p>
 <p><strong>getpassword</strong> <em>&lt;prompt&gt;</em> -- get <em>silent</em> keyboard input and store
 it in <tt class="docutils literal"><span class="pre">__password__</span></tt>.</p>
 </div>
+<div class="section" id="special-variables">
+<h2><a class="toc-backref" href="#id10" name="special-variables">Special variables</a></h2>
+<p><strong>__input__</strong> -- result of last <strong>getinput</strong></p>
+<p><strong>__password__</strong> -- result of last <strong>getpassword</strong></p>
+</div>
 </div>
 <div class="section" id="requirements-availability-and-licensing">
-<h1><a class="toc-backref" href="#id10" name="requirements-availability-and-licensing">Requirements, Availability and Licensing</a></h1>
+<h1><a class="toc-backref" href="#id11" name="requirements-availability-and-licensing">Requirements, Availability and Licensing</a></h1>
 <p>twill is developed in python 2.3, and should work fine with python 2.4.
 You don't need any other software; both <a class="reference" href="http://pyparsing.sourceforge.net/">pyparsing</a> and <a class="reference" href="http://wwwsearch.sf.net/">mechanize</a> are
 required but included with twill.</p>
@@ -155,7 +162,7 @@ download <a class="reference" href="http://darcs.idyll.org/~t/projects/twill-0.7
 <a class="reference" href="http://darcs.idyll.org/~t/projects/twill-latest.tar.gz">twill-latest.tar.gz</a>.  There's a darcs repository for the project at
 <a class="reference" href="http://darcs.idyll.org/~t/projects/twill/">http://darcs.idyll.org/~t/projects/twill/</a>.</p>
 <div class="section" id="licensing">
-<h2><a class="toc-backref" href="#id11" name="licensing">Licensing</a></h2>
+<h2><a class="toc-backref" href="#id12" name="licensing">Licensing</a></h2>
 <p>twill 0.7 is licensed under the <a class="reference" href="http://www.gnu.org/copyleft/lesser.html">GNU LGPL</a>, although I am amenable to
 changing to an MIT-like license in the future.  All code currently
 contained in twill is Copyright (C) 2005, C. Titus Brown
@@ -174,7 +181,7 @@ so you should have no problems.)</p>
 </div>
 </div>
 <div class="section" id="installation-and-examples">
-<h1><a class="toc-backref" href="#id12" name="installation-and-examples">Installation and Examples</a></h1>
+<h1><a class="toc-backref" href="#id13" name="installation-and-examples">Installation and Examples</a></h1>
 <p>To install twill, just run</p>
 <pre class="literal-block">
 python setup.py install
@@ -191,7 +198,7 @@ in the examples is a test of the Quixote demo site, and a script for
 clearing out SourceForge Mailman lists.  The latter script makes use of the
 (very simple!) extension feature, if you're interested...</p>
 <div class="section" id="recording-scripts">
-<h2><a class="toc-backref" href="#id13" name="recording-scripts">Recording scripts</a></h2>
+<h2><a class="toc-backref" href="#id14" name="recording-scripts">Recording scripts</a></h2>
 <p>Writing twill scripts is boring.  One simple way to get at least a
 rough initial script is to use the <a class="reference" href="http://maxq.tigris.org/">maxq</a> recorder to generate a twill
 script.  <a class="reference" href="http://maxq.tigris.org/">maxq</a> acts as an HTTP proxy and records all HTTP traffic; I
@@ -201,7 +208,7 @@ under the directory <tt class="docutils literal"><span class="pre">maxq/</span><
 </div>
 </div>
 <div class="section" id="implementation-and-extending-twill">
-<h1><a class="toc-backref" href="#id14" name="implementation-and-extending-twill">Implementation and Extending Twill</a></h1>
+<h1><a class="toc-backref" href="#id15" name="implementation-and-extending-twill">Implementation and Extending Twill</a></h1>
 <p>twill is pretty small at the moment, and I'm hoping to keep the core
 of it very simple.  twill is essentially a thin shell around the
 <a class="reference" href="http://wwwsearch.sf.net/">mechanize</a> package.  All twill commands are implemented in the
@@ -216,7 +223,7 @@ exports the functions you want to call and run <tt class="docutils literal"><spa
 the <cite>commands.py</cite> module.  This may be useful for twill extensions as
 well as for other toolkits.</p>
 <div class="section" id="miscellaneous-implementation-details">
-<h2><a class="toc-backref" href="#id15" name="miscellaneous-implementation-details">Miscellaneous Implementation Details</a></h2>
+<h2><a class="toc-backref" href="#id16" name="miscellaneous-implementation-details">Miscellaneous Implementation Details</a></h2>
 <blockquote>
 <ul class="simple">
 <li>twill ignores robots.txt.</li>
@@ -226,13 +233,13 @@ well as for other toolkits.</p>
 </div>
 </div>
 <div class="section" id="why-reimplement-pbp">
-<h1><a class="toc-backref" href="#id16" name="why-reimplement-pbp">Why Reimplement PBP?</a></h1>
+<h1><a class="toc-backref" href="#id17" name="why-reimplement-pbp">Why Reimplement PBP?</a></h1>
 <p>PBP is a great idea, but Cory Dodt (the author of PBP) is focusing on
 other things at the moment, and I needed a solid scripting language
 for Web testing.  Plus, I wanted to play with mechanize.</p>
 </div>
 <div class="section" id="future-plans">
-<h1><a class="toc-backref" href="#id17" name="future-plans">Future Plans</a></h1>
+<h1><a class="toc-backref" href="#id18" name="future-plans">Future Plans</a></h1>
 <p>I'm scratching my own itch with twill at the moment, so development of
 the core functionality will proceed sporadically.  Right now I'm
 starting to integrate it into my own projects, so expect many bug
@@ -247,12 +254,15 @@ fork server before executing twill.  (or special test script,
 whatever.)</li>
 <li>formfile &lt;formspec&gt; &lt;fieldspec&gt; &lt;filename&gt;</li>
 <li>twill-sh -i as in python -i</li>
+<li>twill-sh silence</li>
+<li>__url__</li>
+<li>submit on forms w/o submit button? (helgon...)</li>
 </ol>
 </blockquote>
 <p>Contributions are welcome &amp; will be duly acknowledged!</p>
 </div>
 <div class="section" id="acknowledgements-and-credits">
-<h1><a class="toc-backref" href="#id18" name="acknowledgements-and-credits">Acknowledgements and Credits</a></h1>
+<h1><a class="toc-backref" href="#id19" name="acknowledgements-and-credits">Acknowledgements and Credits</a></h1>
 <p>Cory Dodt had a great idea with PBP, and I thank him for his insight.
 Ian Bicking gave me the idea of reimplementing PBP on top of IPython
 (since abandoned in favor of <a class="reference" href="http://docs.python.org/lib/module-cmd.html">cmd</a>).  Grig Gheorghiu was strangely
@@ -260,8 +270,8 @@ enthusiastic about the simple demo I showed him.  John J. Lee has
 promptly and enthusiastically checked in my various patches to
 mechanize.  Michele Simionato is an early adopter who has helped quite
 a bit.  Thanks, guys...</p>
-<p>Bug reports have come in from the following fine people: Chris Miles
-and MATSUNO Tokuhiro.</p>
+<p>Bug reports have come in from the following fine people: Chris Miles,
+MATSUNO Tokuhiro, and Elvelind Grandin.</p>
 <p>This document was written by C. Titus Brown, <a class="reference" href="mailto:titus&#64;caltech.edu">titus&#64;caltech.edu</a>.
 Last updated May '05.</p>
 </div>
